src/objects/sharem__SmUser__c.object
<CustomObject>
    <fields>
        <fullName>sharem__DateTimeOfLastDocsReview__c</fullName>
        <label>Date Time Of Last Review of Documents</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sharem__LastVisitedDate__c</fullName>
        <label>Last Visited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sharem__ReplicatorLastUseDate__c</fullName>
        <label>Replicator Last Use Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sharem__SyncJobId__c</fullName>
        <label>Sync Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharem__SyncStatus__c</fullName>
        <label>Sync Status</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sharem__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SmUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SmUser</label>
    <listViews>
        <fullName>sharem__All</fullName>
        <columns>NAME</columns>
        <columns>sharem__User__c</columns>
        <columns>sharem__SyncStatus__c</columns>
        <columns>sharem__SyncJobId__c</columns>
        <columns>sharem__LastVisitedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>U-{0000}</displayFormat>
        <label>SmUser</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SmUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>